traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  getDirection() match {
  ^Snake:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return (murDevant && murAuNord)
  ^